Fixed button contrast

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -339,10 +339,11 @@ input[name='q']::placeholder {
     padding: 10px;
 }
 
+
 .accent-color {
     background-color: #045A67;
-
 }
+
 
 .white-overlay-background {
     background-color: rgb(255, 255, 255, 0.4);
@@ -402,4 +403,27 @@ input[name='q']::placeholder {
 #privacy {
     margin: 0 auto;
     color: black;
+}
+
+#chimp-button {
+    background-color: #045A67;
+    clear: both;
+    background-color: #aaa;
+    border: 0 none;
+    border-radius: 4px;
+    transition: all 0.23s ease-in-out 0s;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: normal;
+    height: 32px;
+    line-height: 32px;
+    margin: 0 5px 10px 0;
+    padding: 0 22px;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: top;
+    white-space: nowrap;
+    width: fit-content;
 }
